--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,277 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  list-style: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.border-bottom {
+  border-bottom: var(--border-base);
+}
+
+div {
+  display: block;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.line-break {
+  border-top: 1px solid #c5cbd5;
+  margin: 20px 0;
+  padding-top: 1rem;
+}
+
+button {
+  appearance: auto;
+  writing-mode: horizontal-tb !important;
+  text-rendering: auto;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-indent: 0px;
+  text-shadow: none;
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  margin: 0;
+  text-transform: none;
+  cursor: pointer;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+}
+
+.search-button {
+  fill: #0046be;
+  background-color: transparent;
+  border-left: 0;
+  margin: 1px 0;
+  padding: 4px;
+  right: 1px;
+  width: 35px;
+}
+
+.left-buttons {
+  display: flex;
+  width: 25%;
+  padding-right: 1rem;
+  border-top: 1px solid #c5cbd5;
+  flex-direction: column;
+  float: left;
+}
+
+.left-buttons-block {
+  justify-content: center;
+  padding-left: 0;
+  padding-right: 0;
+  width: 100%;
+  display: inline-flex;
+}
+
+.ask-button {
+  background-color: #0046be;
+  color: #fff;
+  margin-bottom: 16px;
+  margin-top: 30px;
+  height: 35px;
+}
+
+
+.see-button {
+  background-color: #fff;
+  border-style: solid;
+  border-color: #0046be;
+  border-width: 1px;
+  color: #0046be;
+  height: 35px;
+}
+
+.questions-answers-container {
+  width: 75%;
+  float: left;
+  padding-left: 3rem;
+}
+
+.line-break {
+  border-top: 1px solid #c5cbd5;
+  margin: 20px 0;
+  padding-top: 3rem;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked+.slider {
+  background-color: #2196F3;
+}
+
+input:focus+.slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+* {
+  /* Reset browser's padding and margin */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.filter-bar {
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.toggle-container {
+  min-width: 300px;
+  padding-right: 100px;
+}
+
+.question-answers-search {
+  min-width: 600px;
+}
+
+.search-field {
+  min-width: 500px;
+}
+
+.options {
+  min-width: 300px;
+  padding-right: 100px;
+}
+
+.container {
+  margin: 200px auto;
+  width: 500px;
+  height: 60px
+}
+
+/* The point of this tutorial is here */
+.form {
+  display: flex;
+  flex-direction: row;
+}
+
+.search-field {
+  width: 15rem;
+  height: 3rem;
+  /* padding: 10px 35px 10px 15px; */
+  /* 
+  border-radius: 100px;
+  outline: none; */
+}
+
+.search-button {
+  background: transparent;
+  /* border: none;
+  outline: none;
+  margin-left: -33px; */
+}
+
+.search-button img {
+  width: 20px;
+  height: 20px;
+  object-fit: cover;
+}
+
+.Collapsible {
+  height: 50px;
+  margin-left: 90px;
+  margin-right: 90px;
+  min-width: 1050px;
+  justify-content: center;
+}
+
+/* .Collapsible span {
+  padding-top: 10px;
+  padding-bottom: 25px;
+  padding-right: 800px;
+} */
+
+.Collapsible svg {
+  padding-top: 20;
+}
+
+.Collapsible svg:hover {
+  cursor: pointer;
+}
+
+.Collapsible__contentInner {
+  max-height: fit-content;
+}
+
+.Collapsible__contentOuter {
+  border-bottom: 1px solid lightgray;
+  padding-top: 20px;
+}
+
+.Collapsible__trigger {
+  font-size: 27px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+
+}
+
+.Collapsible__trigger:hover {
+  cursor: pointer;
+}
+
+.Collapsible__trigger svg.is-open {
+  transform: rotateZ(180deg);
 }
