--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  padding: 0;
   list-style: none;
 }
 
@@ -93,14 +92,15 @@ button {
 
 .questions-answers-container {
   width: 75%;
+  line-height: 30px;
   float: left;
   padding-left: 3rem;
+  text-align: left;
 }
 
 .line-break {
   border-top: 1px solid #c5cbd5;
   margin: 20px 0;
-  padding-top: 3rem;
 }
 
 .switch {
@@ -210,17 +210,10 @@ input:checked+.slider:before {
 .search-field {
   width: 15rem;
   height: 3rem;
-  /* padding: 10px 35px 10px 15px; */
-  /* 
-  border-radius: 100px;
-  outline: none; */
 }
 
 .search-button {
   background: transparent;
-  /* border: none;
-  outline: none;
-  margin-left: -33px; */
 }
 
 .search-button img {
@@ -237,11 +230,15 @@ input:checked+.slider:before {
   justify-content: center;
 }
 
-/* .Collapsible span {
+.Collapsible__trigger {
   padding-top: 10px;
   padding-bottom: 25px;
   padding-right: 800px;
-} */
+  font-size: 17px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+}
 
 .Collapsible svg {
   padding-top: 20;
@@ -260,13 +257,6 @@ input:checked+.slider:before {
   padding-top: 20px;
 }
 
-.Collapsible__trigger {
-  font-size: 27px;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: left;
-
-}
 
 .Collapsible__trigger:hover {
   cursor: pointer;
@@ -274,4 +264,44 @@ input:checked+.slider:before {
 
 .Collapsible__trigger svg.is-open {
   transform: rotateZ(180deg);
+}
+
+.author {
+  font-size: small;
+}
+
+.button-qa-container {
+  display: flex;
+}
+
+.bottom-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.ask-bottom {
+  background-color: #0046be;
+  color: #fff;
+  height: 35px;
+  width: 15rem;
+  margin-bottom: 16px;
+}
+
+.question {
+  color: #0457c8;
+}
+
+.see-bottom {
+  margin-right: 20px;
+  background-color: #fff;
+  border-style: solid;
+  border-color: #0046be;
+  border-width: 1px;
+  color: #0046be;
+  height: 35px;
+  width: 15rem;
+  margin-bottom: 16px;
 }
